--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -86,7 +86,7 @@ p {
   line-height: calc(15 / 11);
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: $color-dark;
+  color: $color-uppertitle-light;
   display: flex;
   align-items: center;
   padding-bottom: 20px;
