--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,5 +1,8 @@
 .benefits {
   display: flex;
+  @media screen and (max-width: 1199px) {
+    flex-wrap: wrap;
+  }
 }
 
 .benefits-cards {
@@ -58,6 +61,9 @@
 }
 
 .benefits-description {
+  @media screen and (max-width: 1199px) {
+    order: -1;
+  }
   width: 500px;
   margin-right: 70px;
 }
