--- a/sass/components/_booking.scss
+++ b/sass/components/_booking.scss
@@ -4,12 +4,15 @@
 
 .double-section .container {
   display: flex;
+  @media screen and (max-width: 1199px) {
+    flex-wrap: wrap;
+  }
 }
 
 .booking {
   padding-top: 130px;
   padding-bottom: 130px;
-  width: 600px;
+  // width: 600px;
   height: 644px;
 }
 
@@ -20,7 +23,7 @@
 }
 
 .booking-form__input {
-  width: 260px;
+  // width: 260px;
   height: 24px;
   font-weight: 600;
   font-size: 11px;
@@ -46,7 +49,7 @@
 }
 
 .booking-form__comment {
-  width: 550px;
+  // width: 550px;
   height: 76px;
   font-weight: 600;
   font-size: 11px;
