--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -9,8 +9,11 @@
   gap: 30px;
 }
 .about-description {
-  padding: 0 64px;
+  @media screen and (max-width: 767px) {
+    padding: 84px 0;
 }
+  }
+  
 .about-text {
   font-size: 14px;
   line-height: calc(26 / 14);
