--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -3,37 +3,64 @@
 }
 
 .services {
-  background-image: url(../images/price-bg.svg);
+  // margin-left: auto;
+  // margin-right: auto;
+  background-image: url(/images/services/services-m@1x.png);
+  @media screen and (min-width: 768px) {
+    background-image: url(/images/services/services-t@1x.png);
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: url(/images/services/services-d@1x.png);
+  }
   background-repeat: no-repeat;
-  margin-left: auto;
-  margin-right: auto;  
-  height: 718px;
+
+  @media screen and (min-width: 480px) {
+    height: 738px;
+  }
+  @media screen and (min-width: 768px) {
+    height: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 718px;
+  }
 }
 
 .services-block {
-  display: flex;
+  @media screen and (max-width: 1199px) {
+    display: block;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
   margin-bottom: 50px;
 }
 
 .services-list__left,
 .services-list__right {
-  font-size: 18px;
-  line-height: calc(30 / 18);
+  @media screen and (max-width: 1199px) {
+    font-size: 14px;
+    line-height: calc(20 / 14);
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 18px;
+    line-height: calc(30 / 18);
+  }
   letter-spacing: 0.02em;
   color: $color-text-light;
   list-style: none;
   padding: 30px 40px;
   margin: 0;
-  width: 585px;
+  // width: 585px;
   height: 240px;
 }
 
-.services-list__left {
-  background: $gradient-left-list;
-}
-
-.services-list__right {
-  background: $gradient-right-list;
+@media screen and (min-width: 1200px) {
+  .services-list__left {
+    background: $gradient-left-list;
+  }
+  .services-list__right {
+    background: $gradient-right-list;
+  }
 }
 
 .services-list__item {
