--- a/css/main.css
+++ b/css/main.css
@@ -36,9 +36,23 @@ p {
   }
 }
 
-.section {
-  padding-bottom: 130px;
-  padding-top: 130px;
+@media screen and (min-width: 480px) {
+  .section {
+    padding-top: 84px;
+    padding-bottom: 84px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
 }
 
 .link {
@@ -134,13 +148,33 @@ p {
 @media screen and (max-width: 1199px) {
   .title-dark,
 .title-light {
-    font-size: 28px;
-    line-height: 1.1785714286;
+    font-size: 40px;
+    line-height: 1.175;
   }
 }
 @media screen and (min-width: 1200px) {
   .title-dark,
 .title-light {
+    font-size: 42px;
+    line-height: 1.1666666667;
+  }
+}
+
+.title-about {
+  font-family: "Raleway";
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: #303030;
+  padding-bottom: 20px;
+}
+@media screen and (max-width: 1199px) {
+  .title-about {
+    font-size: 28px;
+    line-height: 1.1785714286;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .title-about {
     font-size: 42px;
     line-height: 1.1666666667;
   }
@@ -1036,12 +1070,6 @@ p {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .about-description {
-    padding: 84px 0;
-  }
-}
-
 .about-text {
   font-size: 14px;
   line-height: 1.8571428571;
@@ -1057,6 +1085,7 @@ p {
 .services {
   background-image: url(/images/services/services-m@1x.png);
   background-repeat: no-repeat;
+  background-position: center;
 }
 @media screen and (min-width: 768px) {
   .services {
@@ -1100,20 +1129,44 @@ p {
   }
 }
 
-.services-list__left,
-.services-list__right {
+.services-list__item-all {
   letter-spacing: 0.02em;
   color: #9da4bd;
   list-style: none;
-  padding: 30px 40px;
   margin: 0;
-  height: 240px;
+}
+@media screen and (min-width: 480px) {
+  .services-list__item-all {
+    font-size: 14px;
+    line-height: 1.4285714286;
+    padding: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .services-list__item-all {
+    font-size: 18px;
+    line-height: 1.6666666667;
+    padding: 32px 34px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .services-list__item-all {
+    display: none;
+  }
+}
+
+.services-list__left,
+.services-list__right {
+  padding: 30px 40px;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+  list-style: none;
+  margin: 0;
 }
 @media screen and (max-width: 1199px) {
   .services-list__left,
 .services-list__right {
-    font-size: 14px;
-    line-height: 1.4285714286;
+    display: none;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1122,6 +1175,17 @@ p {
     font-size: 18px;
     line-height: 1.6666666667;
   }
+}
+
+.services-list__left {
+  background: -webkit-gradient(linear, left top, left bottom, from(#171a24), to(rgba(23, 26, 36, 0.2)));
+  background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+
+.services-list__right {
+  padding: 0 30px 30px 30px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#090b13), to(rgba(9, 11, 19, 0.2)));
+  background: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
 }
 
 @media screen and (min-width: 1200px) {
@@ -1142,6 +1206,9 @@ p {
       -ms-flex-align: baseline;
           align-items: baseline;
   gap: 12px;
+}
+
+.services-list__item:not(:last-child) {
   margin-bottom: 20px;
 }
 
