--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -15,7 +15,7 @@ p {
   margin-right: auto;
   @media screen and (min-width: 480px) {
     width: 480px;
-    padding: 0 31px;
+    padding: 0 30px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
@@ -143,6 +143,15 @@ p {
     line-height: calc(49 / 42);
   }
 }
+.title-benefits {
+  font-family: $font-second;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: $color-dark;
+  padding-bottom: 20px;
+  font-size: 42px;
+  line-height: calc(49 / 42);
+}
 
 .title-dark {
   color: $color-dark;
@@ -166,6 +175,15 @@ p {
   letter-spacing: 0.02em;
   color: $color-text-dark;
   padding-bottom: 20px;
+}
+
+.subtitle-benefits {  
+    font-size: 18px;
+    line-height: calc(30 / 18);
+ 
+  letter-spacing: 0.02em;
+  color: $color-text-dark;
+  padding-bottom: 44px;
 }
 
 .uppertitle-light {
