--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,15 @@
 /* fonts */
 /* colors */
 /* others */
+.gallery-list, .team-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 body {
   background-color: #ffffff;
   font-family: "Open Sans", sans-serif;
@@ -13,6 +22,11 @@ p {
   margin: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -20,7 +34,7 @@ p {
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    padding: 0 30px;
+    padding: 0 31px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -144,17 +158,23 @@ p {
   font-family: "Raleway";
   font-weight: 700;
   letter-spacing: 0.05em;
+  font-size: 42px;
+  line-height: 1.1666666667;
+}
+
+.title-services {
+  font-family: "Raleway";
+  font-weight: 700;
+  letter-spacing: 0.05em;
 }
 @media screen and (max-width: 1199px) {
-  .title-dark,
-.title-light {
+  .title-services {
     font-size: 40px;
     line-height: 1.175;
   }
 }
 @media screen and (min-width: 1200px) {
-  .title-dark,
-.title-light {
+  .title-services {
     font-size: 42px;
     line-height: 1.1666666667;
   }
@@ -164,8 +184,6 @@ p {
   font-family: "Raleway";
   font-weight: 700;
   letter-spacing: 0.05em;
-  color: #303030;
-  padding-bottom: 20px;
 }
 @media screen and (max-width: 1199px) {
   .title-about {
@@ -190,11 +208,13 @@ p {
   line-height: 1.1666666667;
 }
 
+.title-about,
 .title-dark {
   color: #303030;
   padding-bottom: 20px;
 }
 
+.title-services,
 .title-light {
   color: #ffffff;
   padding-bottom: 40px;
@@ -1346,12 +1366,25 @@ p {
 }
 
 .team-list {
-  gap: 30px;
+  gap: 64px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .team-list {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+
+.team-card {
+  background-color: #ffffff;
+}
+@media screen and (min-width: 1200px) {
+  .team-card {
+    width: calc((100% - 60px) / 3);
   }
 }
 
@@ -1424,17 +1457,11 @@ p {
 
 .gallery-list {
   gap: 30px;
-}
-@media screen and (max-width: 1199px) {
-  .gallery-list {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
-
-.gallery-list__item {
-  -ms-flex-preferred-size: calc((100% - 90px) / 4);
-      flex-basis: calc((100% - 90px) / 4);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .double-section {
