--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -10,12 +10,17 @@ p {
   margin: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
   @media screen and (min-width: 480px) {
     width: 480px;
-    padding: 0 30px;
+    padding: 0 31px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
@@ -118,6 +123,14 @@ p {
   font-family: $font-second;
   font-weight: 700;
   letter-spacing: 0.05em;
+  font-size: 42px;
+  line-height: calc(49 / 42);
+}
+
+.title-services {
+  font-family: $font-second;
+  font-weight: 700;
+  letter-spacing: 0.05em;
   @media screen and (max-width: 1199px) {
     font-size: 40px;
     line-height: calc(47 / 40);
@@ -132,8 +145,6 @@ p {
   font-family: $font-second;
   font-weight: 700;
   letter-spacing: 0.05em;
-  color: $color-dark;
-  padding-bottom: 20px;
   @media screen and (max-width: 1199px) {
     font-size: 28px;
     line-height: calc(33 / 28);
@@ -153,11 +164,13 @@ p {
   line-height: calc(49 / 42);
 }
 
+.title-about,
 .title-dark {
   color: $color-dark;
   padding-bottom: 20px;
 }
 
+.title-services,
 .title-light {
   color: $color-main;
   padding-bottom: 40px;
@@ -177,10 +190,10 @@ p {
   padding-bottom: 20px;
 }
 
-.subtitle-benefits {  
-    font-size: 18px;
-    line-height: calc(30 / 18);
- 
+.subtitle-benefits {
+  font-size: 18px;
+  line-height: calc(30 / 18);
+
   letter-spacing: 0.02em;
   color: $color-text-dark;
   padding-bottom: 44px;
