--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -2,16 +2,18 @@
   background-color: $color-services-bg;
 }
 
-.services {
-  background-image: url(/images/services/services-m@1x.png);
-  background-repeat: no-repeat;
-  background-position: center;
+.services {    
+  @media screen and (max-width: 767px) {
+    background-image: url(/images/services/services-m@1x.png);
+  }
   @media screen and (min-width: 768px) {
     background-image: url(/images/services/services-t@1x.png);
   }
   @media screen and (min-width: 1200px) {
     background-image: url(/images/services/services-d@1x.png);
   }
+  background-repeat: no-repeat;
+  background-position: center;
   @media screen and (min-width: 480px) {
     height: 738px;
   }
